# fengling

./: CONTRIBUTING.md  README.md
.codex-plugin/: plugin.json
scripts/: install-fengling-local.sh
scripts/fengling-backend/evidence/: studio_blank_state_template.json
scripts/fengling-backend/scripts/: suno_auto_recut_upload.py
scripts/fengling-cli/: Makefile  README.md  pyproject.toml
scripts/fengling-cli/docs/: legacy-service-inventory.md
scripts/fengling-cli/fengling_cli/: main.py
scripts/fengling-cli/tests/: test_cli.py
skills/fengling/: SKILL.md
